--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -24,7 +24,7 @@
 }
 
 @mixin close-button-fs {
-  background-color: $turqois-1;
+  background-color: $white;
   border: 0;
   display: block;
   position: absolute;
